compiler/zrc_codegen/src/expr/snapshots/zrc_codegen__expr__misc__tests__cast_extension_generates_properly.snap
---
source: compiler/zrc_codegen/src/expr/misc.rs
description: "fn test_sext_i8_to_i32() -> i32 {\n    let x: i8 = 1i8;\n    return x as i32;\n}\n\nfn test_zext_u8_to_i32() -> i32 {\n    let x: u8 = 255u8;\n    return x as i32;\n}\n\nfn test_small_to_large() -> u64 {\n    let x: u8 = 255u8;\n    return x as u64;\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

define i32 @test_sext_i8_to_i32() !dbg !3 {
entry:
  %let_x = alloca i8, align 1
  store i8 1, ptr %let_x, align 1, !dbg !7
  %load = load i8, ptr %let_x, align 1, !dbg !10
  %cast = sext i8 %load to i32, !dbg !10
  ret i32 %cast, !dbg !10
}

define i32 @test_zext_u8_to_i32() !dbg !11 {
entry:
  %let_x = alloca i8, align 1
  store i8 -1, ptr %let_x, align 1, !dbg !12
  %load = load i8, ptr %let_x, align 1, !dbg !15
  %cast = zext i8 %load to i32, !dbg !15
  ret i32 %cast, !dbg !15
}

define i64 @test_small_to_large() !dbg !16 {
entry:
  %let_x = alloca i8, align 1
  store i8 -1, ptr %let_x, align 1, !dbg !20
  %load = load i8, ptr %let_x, align 1, !dbg !23
  %cast = zext i8 %load to i64, !dbg !23
  ret i64 %cast, !dbg !23
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test_sext_i8_to_i32", linkageName: "test_sext_i8_to_i32", scope: null, file: !2, line: 1, type: !4, scopeLine: 1, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DIBasicType(name: "i32")
!7 = !DILocation(line: 2, column: 9, scope: !8)
!8 = distinct !DILexicalBlock(scope: !9, file: !2, line: 1, column: 33)
!9 = distinct !DILexicalBlock(scope: !3, file: !2, line: 1, column: 33)
!10 = !DILocation(line: 3, column: 12, scope: !8)
!11 = distinct !DISubprogram(name: "test_zext_u8_to_i32", linkageName: "test_zext_u8_to_i32", scope: null, file: !2, line: 6, type: !4, scopeLine: 6, spFlags: DISPFlagDefinition, unit: !1)
!12 = !DILocation(line: 7, column: 9, scope: !13)
!13 = distinct !DILexicalBlock(scope: !14, file: !2, line: 6, column: 33)
!14 = distinct !DILexicalBlock(scope: !11, file: !2, line: 6, column: 33)
!15 = !DILocation(line: 8, column: 12, scope: !13)
!16 = distinct !DISubprogram(name: "test_small_to_large", linkageName: "test_small_to_large", scope: null, file: !2, line: 11, type: !17, scopeLine: 11, spFlags: DISPFlagDefinition, unit: !1)
!17 = !DISubroutineType(types: !18)
!18 = !{!19}
!19 = !DIBasicType(name: "u64")
!20 = !DILocation(line: 12, column: 9, scope: !21)
!21 = distinct !DILexicalBlock(scope: !22, file: !2, line: 11, column: 33)
!22 = distinct !DILexicalBlock(scope: !16, file: !2, line: 11, column: 33)
!23 = !DILocation(line: 13, column: 12, scope: !21)
