compiler/zrc_codegen/src/expr/snapshots/zrc_codegen__expr__misc__tests__cast_same_size_generates_properly.snap
---
source: compiler/zrc_codegen/src/expr/misc.rs
description: "fn test_same_size_signed_to_unsigned() -> u32 {\n    let x: i32 = 42;\n    return x as u32;\n}\n\nfn test_same_size_unsigned_to_signed() -> i32 {\n    let x: u32 = 42;\n    return x as i32;\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

define i32 @test_same_size_signed_to_unsigned() !dbg !3 {
entry:
  %let_x = alloca i32, align 4
  store i32 42, ptr %let_x, align 4, !dbg !7
  %load = load i32, ptr %let_x, align 4, !dbg !10
  ret i32 %load, !dbg !10
}

define i32 @test_same_size_unsigned_to_signed() !dbg !11 {
entry:
  %let_x = alloca i32, align 4
  store i32 42, ptr %let_x, align 4, !dbg !15
  %load = load i32, ptr %let_x, align 4, !dbg !18
  ret i32 %load, !dbg !18
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test_same_size_signed_to_unsigned", linkageName: "test_same_size_signed_to_unsigned", scope: null, file: !2, line: 1, type: !4, scopeLine: 1, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DIBasicType(name: "u32")
!7 = !DILocation(line: 2, column: 9, scope: !8)
!8 = distinct !DILexicalBlock(scope: !9, file: !2, line: 1, column: 47)
!9 = distinct !DILexicalBlock(scope: !3, file: !2, line: 1, column: 47)
!10 = !DILocation(line: 3, column: 12, scope: !8)
!11 = distinct !DISubprogram(name: "test_same_size_unsigned_to_signed", linkageName: "test_same_size_unsigned_to_signed", scope: null, file: !2, line: 6, type: !12, scopeLine: 6, spFlags: DISPFlagDefinition, unit: !1)
!12 = !DISubroutineType(types: !13)
!13 = !{!14}
!14 = !DIBasicType(name: "i32")
!15 = !DILocation(line: 7, column: 9, scope: !16)
!16 = distinct !DILexicalBlock(scope: !17, file: !2, line: 6, column: 47)
!17 = distinct !DILexicalBlock(scope: !11, file: !2, line: 6, column: 47)
!18 = !DILocation(line: 8, column: 12, scope: !16)
