compiler/zrc_codegen/src/expr/snapshots/zrc_codegen__expr__misc__tests__cast_truncation_generates_properly.snap
---
source: compiler/zrc_codegen/src/expr/misc.rs
description: "fn test_trunc_signed_to_unsigned() -> u8 {\n    let x: i32 = 65;\n    return x as u8;\n}\n\nfn test_trunc_unsigned_to_signed() -> i8 {\n    let x: u32 = 65;\n    return x as i8;\n}\n\nfn test_large_to_small_trunc() -> i16 {\n    let x: i64 = 1000;\n    return x as i16;\n}\n"
expression: resulting_ir
---
; ModuleID = 'test.zr'
source_filename = "test.zr"

define i8 @test_trunc_signed_to_unsigned() !dbg !3 {
entry:
  %let_x = alloca i32, align 4
  store i32 65, ptr %let_x, align 4, !dbg !7
  %load = load i32, ptr %let_x, align 4, !dbg !10
  %cast = trunc i32 %load to i8, !dbg !10
  ret i8 %cast, !dbg !10
}

define i8 @test_trunc_unsigned_to_signed() !dbg !11 {
entry:
  %let_x = alloca i32, align 4
  store i32 65, ptr %let_x, align 4, !dbg !15
  %load = load i32, ptr %let_x, align 4, !dbg !18
  %cast = trunc i32 %load to i8, !dbg !18
  ret i8 %cast, !dbg !18
}

define i16 @test_large_to_small_trunc() !dbg !19 {
entry:
  %let_x = alloca i64, align 8
  store i64 1000, ptr %let_x, align 4, !dbg !23
  %load = load i64, ptr %let_x, align 4, !dbg !26
  %cast = trunc i64 %load to i16, !dbg !26
  ret i16 %cast, !dbg !26
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "zrc test runner", isOptimized: false, flags: "zrc --fake-args", runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!2 = !DIFile(filename: "test.zr", directory: "/fake/path")
!3 = distinct !DISubprogram(name: "test_trunc_signed_to_unsigned", linkageName: "test_trunc_signed_to_unsigned", scope: null, file: !2, line: 1, type: !4, scopeLine: 1, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DIBasicType(name: "u8")
!7 = !DILocation(line: 2, column: 9, scope: !8)
!8 = distinct !DILexicalBlock(scope: !9, file: !2, line: 1, column: 42)
!9 = distinct !DILexicalBlock(scope: !3, file: !2, line: 1, column: 42)
!10 = !DILocation(line: 3, column: 12, scope: !8)
!11 = distinct !DISubprogram(name: "test_trunc_unsigned_to_signed", linkageName: "test_trunc_unsigned_to_signed", scope: null, file: !2, line: 6, type: !12, scopeLine: 6, spFlags: DISPFlagDefinition, unit: !1)
!12 = !DISubroutineType(types: !13)
!13 = !{!14}
!14 = !DIBasicType(name: "i8")
!15 = !DILocation(line: 7, column: 9, scope: !16)
!16 = distinct !DILexicalBlock(scope: !17, file: !2, line: 6, column: 42)
!17 = distinct !DILexicalBlock(scope: !11, file: !2, line: 6, column: 42)
!18 = !DILocation(line: 8, column: 12, scope: !16)
!19 = distinct !DISubprogram(name: "test_large_to_small_trunc", linkageName: "test_large_to_small_trunc", scope: null, file: !2, line: 11, type: !20, scopeLine: 11, spFlags: DISPFlagDefinition, unit: !1)
!20 = !DISubroutineType(types: !21)
!21 = !{!22}
!22 = !DIBasicType(name: "i16")
!23 = !DILocation(line: 12, column: 9, scope: !24)
!24 = distinct !DILexicalBlock(scope: !25, file: !2, line: 11, column: 39)
!25 = distinct !DILexicalBlock(scope: !19, file: !2, line: 11, column: 39)
!26 = !DILocation(line: 13, column: 12, scope: !24)
